# cpp_util

./: .gitignore  CMakeLists.txt  README.md  build.py  vcpkg.json
core/: CMakeLists.txt
core/DB/: DbHelper.cpp  DbHelper.h
core/File/: file_tool.cc  file_tool.h
core/Foundation/: error.cc  error.h
core/Log/: logger.cc  logger.h
core/Media/: audio_player.h  context.h  decoder.cc  decoder.h  demuxer.cc  demuxer.cpp  demuxer.h  extractor.h  ffmpeg_util.h  frame_extractor.cc  frame_extractor.h  frame_queue.cpp  muxer.cc  muxer.h  packet_queue.h  thread_base.h
core/Media2/: DefaultDemuxer.cc  DefaultDemuxer.h  IDemuxer.h  context.h  decoder.h  decoder_interface.h  demuxer.cc  demuxer.h  file_reader.h  frame_queue.cc  frame_queue.h  frame_wrapper.cc  frame_wrapper.h  packet_queue.cc  packet_queue.h  packet_wrapper.cc  packet_wrapper.h  render.h  video_decoder.cc  video_decoder.h
core/Media2/IOSource/: file_source.h  io_source.h
core/Media3/: audio_player.cpp  decoder.cpp  event_loop.h  video_player.cpp  video_player.h
core/Strand/: ThreadPool.cc  ThreadPool.h  context.cc  context.h  executor.cc  executor.h  thread_pool.cc  thread_pool.h  timer_thread.cc  timer_thread.h
core/Thread/: thread_pool.cc  thread_pool.h  thread_pool_new.h  thread_safe_queue.h
core/Thread/MiaoThreadPool/: thread_pool.h
core/Thread/SimpleThreadPool/: thread_pool.h
core/Timer/: time_simple.cc  time_simple.h
core/other/: any.h  error.h  space.h
core/proto/: build_proto.sh  message.pb.cc  message.pb.h  message.proto
example/: CMakeLists.txt
example/AnyTest/: CMakeLists.txt  any.cc
example/FFPlayerTest/: CMakeLists.txt
example/FFmpegTest/: CMakeLists.txt
example/FFmpegTest/example_01_decode/: CMakeLists.txt  main.cc
example/FileTest/: CMakeLists.txt  file.cc
example/GoogleTest/: CMakeLists.txt  google_test.cc
example/LogTest/: CMakeLists.txt  log.cc  spdlog_base.cc
example/MediaTest/: CMakeLists.txt  media.cc
example/PlayerGithub/: CMakeLists.txt  main.cc
example/PlayerTest/: CMakeLists.txt  player.cc
example/PlayerTest2/: CMakeLists.txt  player.cc  video_state.h
example/PlayerTest3/: CMakeLists.txt
example/ProtoTest/: CMakeLists.txt  message.cc
example/RatioTest/: CMakeLists.txt  ratio.cc
example/SDLTest/: CMakeLists.txt  main.cc  video_player.cc  video_player.h
example/SpaceTest/: CMakeLists.txt  space.cc
example/StrandTest/: CMakeLists.txt  strand.cc
example/ThreadTest/: CMakeLists.txt  thread_safe_queue.cc  thread_test.cc
example/TimerTest/: CMakeLists.txt  timer.cc
example/ZipTest/: CMakeLists.txt  zip.cc
save/ffmpeg_study/: .gitignore  CMakeLists.txt
save/ffmpeg_study/chapter/: CMakeLists.txt
save/ffmpeg_study/chapter/chapter02/: CMakeLists.txt  para.cc  read.cc  write.cc
save/ffmpeg_study/chapter/chapter03/: CMakeLists.txt  mergevideo.cc  recode.cc  splitvideo.cc  timestamp.cc
save/ffmpeg_study/chapter/chapter04/: CMakeLists.txt  saveyuv.cc  writeyuv.cc
save/ffmpeg_study/core/: CMakeLists.txt
save/ffmpeg_study/core/Media/: decoder.cc  decoder.h  demuxer.cc  demuxer.h
save/ffmpeg_study/core/Simple/: ffmpeg_util.cc  ffmpeg_util.h
save/ffmpeg_study/example/: CMakeLists.txt
save/ffmpeg_study/example/core03/: CMakeLists.txt  core.cc  simple.cc
save/miao/: CMakeLists.txt
save/miao/base/01.数组的使用和理解/: main  main.cc  main2  main2.cc
save/miao/base/01.数组的使用和理解/leetcode/: 1.cc  26.cc  main
save/miao/base/02.指针的理解/: main  main.cc
save/miao/base/03.malloc、realloc、free的使用与理解/: array  array.cc  main  main.cc  main2  string.cc
save/miao/base/04.内存布局（堆 vs 栈）/: main  main.cc
save/miao/base/05.函数指针 指针函数/: main  main.cc
save/miao/base/06.inline/: callback  callback.cc  file1.cpp  file2.cpp  main  main.cc  utils.h
save/miao/base/07.enum/: const  const.cc  main  main.cc
save/miao/base/08.constexpr/: main  main.cc
save/miao/base/09.引用的理解/: main  main.cc
save/miao/base/10.异常处理/: main  main.cc
save/miao/base/11.new_delete/: main  main.cc
save/miao/base/12.移动赋值拷贝/: main  main.cc  main2.cc
save/miao/base/13.左值右值引用/: main  main.cc
save/miao/base/14.auto decltype/: main
save/miao/base/15.move的理解/: main  main.cc
save/miao/base/16.对象管理 RAII/: main  main.cc
save/miao/base/17.列表初始化/: main  main.cc
save/miao/base/18.强制类型转换/: check.sh  main  main.cc  main2.cc  reinterpret_cast  reinterpret_cast.cc  static_cast  static_cast.cc
save/miao/base/19.operator重载/: complex.cc  matrix  matrix.cc
save/miao/base/20.继承和多态/: main  main.cc  main2.cc  main3  main3.cc
save/miao/base/21.纯虚函数抽象类/: main  main.cc
save/miao/base/22.函数模板和类模板/: box  box.cc  main  main.cc
save/miao/base/23.可变参数/: main  main.cc
save/miao/base/24.完美转发/: main  main.cc
save/miao/base/25.iterator/: main  main.cc
save/miao/base/26.vector/: main  main.cc
save/miao/base/27.string/: main  main.cc
save/miao/base/28.array和queue/: main  main.cc  queue  queue.cc
save/miao/base/other/any/: main  main.cc
save/miao/sdk/src/: main  main.cc
save/miao/sdk/src/tool/: error.h  io_tool.h
save/miao/src/: main  main.cc  thread_pool.h
save/miao/src/template/: func  func.cc
save/miao/src/timer/: timer.h  timer_queue.h
save/miao/src/标准的cpp类/: main.cc
save/reflecet/: ClassFactory.cc  ClassFactory.h  ClassRegister.h  main.cc
