# add_subdirectory(LogTest)
# add_subdirectory(TimerTest)
# add_subdirectory(ProtoTest)
# add_subdirectory(GoogleTest)
# add_subdirectory(ZipTest)
# add_subdirectory(FileTest)
# add_subdirectory(ThreadTest)
# add_subdirectory(AnyTest)
add_subdirectory(MediaTest)
add_subdirectory(PlayerTest)